# learn-gnome-tech

./: .gitignore  README.md
cli/: main.c  meson.build  usb-desc.c  usb-desc.h
gtk/: main.c  usb_desc.c  usb_desc.h  usbip_app_win.c  usbip_entry.ui  window.ui
gtk/exercise-2/: main.c  meson.build  usb_desc.c  usb_desc.h  usb_get_list.c  usb_get_list.h  usbip_app.c  usbip_app_win.c  usbip_app_win.h  window.ui
webkit2/: meson.build
webkit2/src/: example.html  main.vala  webexten.c  webexten.vala
